# defensive-network

./: .gitignore  FIFA Mens World Cup_10.csv  LICENSE  README.md  analyze_defensive_network.py  explore_metrica.py  explore_statsbomb.py  main.py  main2.py  process_dfb_data.py  pyproject.toml  requirements.txt  to_cloud.py  todos  token.json  tox.ini
.devcontainer/: devcontainer.json
assets/: metrics_sofa.csv
assets/xt_weights/: ma2024.xlsx  the_athletic.xlsx
dashboards/: Explore_defensive_networks.py
dashboards/defensive_network/: Explore_defensive_networks.py
dashboards/pages/: 1_Team_level_analysis.py
defensive_network/assets/: metrics_sofa.csv
defensive_network/misc/: explore_metrica.py  sofascore_ratings_european-championship.csv  (+3 more)
explore/: metrica.py  test_dfl_data_quality.py
model/: passing_network.py  responsibility.py
old/: process_dfb_data.py
scrape/: sofascore_ratings.py  sofascore_ratings_world-championship.csv
scripts/: 2025-06-16_check_raw_data.py  2025-08-06_local_pff.py  2025-09-27_count_frames_etc.py  2025-09-29_sensitivity.py  2025-10-01_world_cup.py  2025-11-23_count_frames.py  2026-02-03_parquet_example.py  2026-02-03_shared_network_metric&example_download.py  2026-02-03_shared_network_metric.py  2026-02-05_corr_checl.py  2026-02-05_goal_shot_data.py  2026-02-06_correlation.py  2026-03-23_shared_network_nodes_edges.py  2026-03-24_visualization_shared_network.py  2026-03-30_player_info.py  2026-03-30_player_position.py  2026-04-13_defensive_network_edge(average).csv  2026-04-13_defensive_network_edge(min).csv  2026-04-13_defensive_network_edge(product).csv  2026-04-13_defensive_network_edge(sum).csv  2026-04-13_shared_network_nodes_edges_final.py  2026-04-13_team_level_network_viz.py  2026-04-13_visualization_shared_network_v2.py  2026-04-16_correlation.py  2026-04-16_player_info_with_starter.csv  2026-04-16_player_lineup.py  2026-04-16correlation.csv  2026-04-20_robustness_icc.csv  2026-04-20_robustness_icc.py  2026-04-21_network_metrics_correlation.py  2026-04-23_concentrated_vs_balanced.py  2026-04-23_self_vs_shared.py  2026-04-24_analysis.py  2026-04-24_match_level_metrics.csv  2026-04-24_team_level_metrics.csv  2026-04-28_defensive_network_edge(average).csv  2026-04-28_defensive_network_edge(min).csv  2026-04-28_defensive_network_edge(product).csv  2026-04-28_defensive_network_edge(sum).csv  2026-04-29-player_level_metrics.csv  (+75 more)
secrets/: client_secret_228954729014-58299oavv1ekhiiejqbu0u0q03hbabh3.apps.googleusercontent.com.json  token.json
utility/: general.py  pitch.py
(+38 files in other folders)
