[project]
name = "defensive_network"
version = "0.0.8"
authors = [
  {name="Jonas Bischofberger", email="jonas.bischofberger@univie.ac.at"},
  {name="Runqing Ma", email="runqing.ma@univie.ac.at"},
]
description = "Implementation of defensive passing networks for football (soccer) analytics."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"

dependencies = [
    "accessible-space",
    "adjustText",
    "beautifulsoup4",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "kloppy",
    "matplotlib",
    "memory-profiler",
    "mplsoccer",
    "networkx",
    "numpy",
    "opencv-python",
    "openpyxl",
    "pandas",
    "pandera[pandas]",
    "patsy",
    "pingouin",
    "plotly",
    "pyarrow",
    "python-slugify",
    "rapidfuzz",
    "requests",
    "scikit-learn",
    "scipy<1.13",
    "seaborn",
    "selenium",
    "shapely",
    "statsbombpy",
    "statsmodels",
    "streamlit",
    "streamlit-profiler",
    "tqdm",
    "webdriver-manager",
    "wfork-streamlit-profiler",
#    "ETSY @ git+https://github.com/ML-KULeuven/ETSY.git",
]
#classifiers = [
#    "Programming Language :: Python",
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.7",
#    "Programming Language :: Python :: 3.8",
#    "Programming Language :: Python :: 3.9",
#    "Programming Language :: Python :: 3.10",
#    "Programming Language :: Python :: 3.11",
#    "Programming Language :: Python :: 3.12",
#    "Programming Language :: Python :: 3.13",
#]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
#full = [
#    "scikit-learn",
#    "kloppy>=3.15.0",
#    "xmltodict",
#    "joblib",
#    "streamlit",
#    "wfork-streamlit-profiler",
#    "brokenaxes",
#    "netcal",
#    "mplsoccer",
#]
#
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "setuptools",
    "tox",
]

[project.urls]
Repository = "https://github.com/jonas-bischofberger/defensive-network"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=defensive_network --doctest-continue-on-failure -rsx"
#filterwarnings = """
#    ignore:Inferring attacking direction:UserWarning
#    ignore:Range of tracking Y coordinates:UserWarning
#    ignore:Range of tracking X coordinates:UserWarning
#"""
#norecursedirs = [
#    ".joblib-cache",
#    "apps",
#]
